<resources>
    <string name="app_name" translatable="false">Jnanagni</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="events">Events</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="event_decs">Description</string>
    <string name="event_task">Tasks and Rules</string>
    <string name="event_prerequisite">Prerequisites / Specifications ( if any )</string>
    <string name="event_judgemental_criteria">Judgemental Criteria</string>
    <string name="event_rules">Rules and Regulations</string>
    <string name="event_time_and_venue">Time and Venue</string>
    <string name="event_coordinator">Coordinator(s)</string>
    <string name="google_android_map_api_key">AIzaSyB5GoLgxGqpkfXJebPTNLWGpoXx2tKIsJo</string>
    <string name="home_content_head">
        We invite you to Jnanagni
    </string>
    <string name="home_content">
        On behalf of Faculty of Engineering &amp; Technology, Gurukula Kangri University, We introduce you to Jñānāgni\'17, the annual technical fest. The national level technical festival which in its inaugural year in 2006 met with a wonderful response and was applauded for its success.
This year we invite you to adorn the most esteemed position by sponsoring the event.\n
- the enlightenment of knowledge, creativity and success. Jñānāgni vies to provide platform to all those talents of the nation who think beyond the books and are eager to get past the oblivion of illusion. Jñānāgni aims to celebrate the festival of experimentation and learning. The plethora of events that Jñānāgni promises is designed in a way to challenge all the dimension of a student\'s cerebrum and we try to keep assure that the winner is "knowledge" in the end.\n\n
It will be a pleasure to have you become a part of Jñānāgni by way of participating in it,and by your valuable suggestions and academic inputs.</string>
    <string name="desc_hydroriser">Teams have to make a rope climbing machine using only hydraulic mechanisms, should be able to push the ball from an adjacent platform.
\nIn this action it will have to compete with another machine in a knockout tournament.
\n\n
There would be two Major Checkpoints. Each major checkpoint has two minor checkpoints.\n
The completion of the minor checkpoints will be considered as completion of major checkpoint.\n
The minor checkpoints in a particular major checkpoint can be completed in any order.\n
The minor checkpoints will be used for reinstallation during the run.\n
The minor checkpoints are -\n
- Pushing the ball of the platform\n
- All the parts of the bot must cross the corresponding distance line for the platform i.e. 500mm/1000mm..\n
\n\n\n

Arena Description\n
\t• The arena will be four ropes. The ropes will look like corners of a square when arena is seen from the top.\n
\t• There will be a central rigid pipe at the centre of square mentioned in point 1.\n
\t• The ropes will be tied at both the ends to rigid surfaces. The rope will be taut.\n
\t• The horizontal distance between the ropes, on the diagonally opposite ends, will be 600 mm.(figure1)\n
\t• The rope would be a jute rope of diameter approximately 40 mm.\n
\t• There would be platforms at three different levels attached to a support pillar at distances of 500mm, 1000 mm, and 2000 mm from the start line. (Please refer to the diagram below for further details about the platform).\n
\t• The Arena from here on is defined form the perspective of a single rope; it will be the same for the remaining ropes.\n
\t• The distance from the centre of the rope to the centre of platform support pillar will be 300 mm.\n
\t• Each rope has a corresponding platform.\n
\t• The distance between the centre of the rope to the near end of the platform will be 200mm.(refer figures)\n
\t• There would be a table tennis ball of diameter 40 mm kept on the platform at a distance of 50mm from the end i.e at a distance of 250mm from the centre of the rope.\n
\t• The balls will be held stationary by mounting them on a holder. (Refer figure 2)\n
\t• The topmost platform will have a single ball at the centre of the support pillar. This ball will be at a distance of 300mm from the centre of the rope.\n
\n\n

Machine Specifications\n
\t• Machine should fit into a box of dimension 300 mm x 300 mm x 300 mm at the time of start. There is no restriction on the height of the machine. The extensions used to control the machine are excluded while measuring the machine dimensions.\n
\t• Machine can expand or compress during the run.\n
\t• Locomotion of any part of the machine should be governed by some hydraulic force.\n
\t• Use of batteries or any other source of stored energy is prohibited.\n
\t• Use of any type of electrical motors, springs, compressor and pressurised cylinders is prohibited.\n\n
Controls\n
\t• The machine should only be controlled with the help of syringes(any other cylinder piston arrangement).\n
\t• Maximum of two people will be allowed to control the machine at any point of time.\n
\n\n
Materials allowed\n
Any material from this list can be used in making the machine:\n
\t1. Syringes (or any other cylinder-piston arrangement)\n
\t2. Tubes\n
\t3. Wood\n
\t4. Metallic frames\n
\t5. Rubber bands\n
\t6. Plastic\n
\t7. Water\n
\t8. Metal pulleys</string>
    <string name="desc_cipher">Ever came across the team <span class="quote"> ‘blind-coding’ </span>? Well this enthralling event would provide an opportunity to showcase your coding skills but in a different way.</string>
    <string name="desc_electroguisial">Task which has to performed, will be decided by organizers but cannot be disclosed beforehand.\n
Candidates will know it at the venue.
</string>
    <string name="desc_annihilator">
The robot which traverses the specified part of the track in the least time will be winner.\n\n


Robot specification\n
\t1. The robot can have maximum dimension of:\n
         \t\t\tlength- 30cm\n
         \t\t\twidth  - 30cm\n
         \t\t\theight - 30cm.\n
\n
\t2. The motor can be used maximum of 200 rpm.\n
\n\n
<b>Power Sspecification </b>\n
\t- The potential difference between any two terminals should not exceed 12v.\n
\t- AC power supply will be provided.\n
\n\n

Descreption of Arena\n
\t- The track may consist of obstacles like:-\n
\t- Grvels with obstacles.\n
\t- Valleys, see-saw.\n
\t- Steps, slopes, rotating element, slipry floor.\n
</string>
    <string name="desc_apptitude">Android – The fastest growing operating system for smart phone devices has been growing in popularity with each update. Its versatile, user friendly applications and flexibility has made it the majority favorite. In this event the participants would be given a platform to show their enthusiasm and skills for Android application development.</string>
    <string name="desc_exgesis">The event has three rounds which test your circuit debugging skills.\n
        \n\n
ROUND 1\n
\tIn this round 10 general aptitude and 10 simple electronics and electrical related questions will be given.time provided for this round 30 min. participant are required to have basic knowledge of electronics and electrical.\n
\n\n
ROUND 2\n
\tParticipants who are selected to the second round are tested on their knowledge of digital circuitry. In this round 5 digital electronics questions  will be given and they are supposed to identify the faults and rectify the circuit.time for this round is 45 min. in this round 5 analog circuit questions will also given. Paricipants  are supposed to find the bugs and solve them. Time for this round is 45 min.\n
\n\n
ROUND 3\n
\tParticipants selected to this round are given a hardware circuit either digital or analog    fault in the circuit should be identified to get the correct output. Time for this round is 2 hours\n</string>
    <string name="desc_concatenation">It is generally a series of process which is linking to one another. It just require a initial triggering and rest is spontanepous. So this event will testify your innate ability to link the key pieces of something so creative that would itself be a marvel……</string>
    <string name="desc_electrocio">Are you ready to show your knowledge about electronics .Knowledge about application of electronics equipment .Where you have to arrange these in such a way what we think! Then come and become the hero of electronics era.
</string>
    <string name="desc_tinkerer">This event consist of 3 Rounds.
\n\n
Round 1\n
\tIn first level the participants will be given three messages which they have to decode and on the basis of their correctness they would be judged.\n
\n\n\nRound 2\n
\tIn the second level participants will be given different objects which they have to utilize or analyze to get the clue for the next level. This level will include the usage of Physics, Chemistry, Basic Electronics lab, Machine lab, and Computer Center.\n
\n\n\nRound 3\n
\tThis level is a "top secret", will be disclosed on successful entry.\n

</string>
    <string name="desc_nopc">This event will be hosted on Hackerearth.\n\n
Round 1\n
\t1. Quiz competition of MCQ type\n
\t2. Questions related to basic algorithms and programming (30min time limit)\n
\n\n
Round 2\n
\tParticipants will have to code according to the instructions provided (3hrs time limit)\n
    </string>
    <string name="desc_inclino">Ever wondered the concept of the Leaning tower of Pisa. Its time to construct your own inclined structure using materials defined below in rules. Then it will be tested for its strength and stability. Make your structure as inclined as possible but keep in mind about its strength. At the same time they have to take care of the accuracy too.</string>
    <string name="desc_cuandigo">Life as it is, is riddled with problems, both easy and complex. Most of these problems have solutions, and we tend to solve them manually and laboriously.\n
        Did we hear a "no"? Maybe you prefer more elegant solutions, perhaps even automating them. Hence, we present <span class="quote">Cuandigo</span>, bringing you an opportunity, to showcase your skills in solving real-life problems, because hey, we\'ve got loads of them.</string>
    <string name="desc_ameliorator">Debugging is the process of finding and resolving of defects that prevent correct operation of computer software or a system. Thus, this event is all about finding the nasty and mischievous bug(s) making our creation futile. Enhance your skill with figuring out the bugs.</string>
    <string name="desc_abhivyakti">This event will involve extempore in the first round and a debate in the second.\n

\nFor Extempore\n
\tParticipant have to pickout a paper from the  random-box which contains three topic of three fields like science ,social science, art, politics, entertainment etc. and He/She have speak on any topic written in his/her paper in very less time.\n

\tLevels:
     \t\t\tLevel 1:- Participant will have 30 sec to think about that topic and 1 min to speak on it.In this level all registered participant are eligible.\n

     \t\t\tLevel 2:- Participant will have 5 min to think about that topic and 3 min to speak on it. Only top-5 from level 1 are eligible.\n

\nFor Debate\n
\tThe debate will be held on currently trending topics. The topic will be given by the organizers at the end of EXTEMPORE Level-1, so you\'ll have enough time to prepare about the topic.\n

\tThe participant should also be among the top 12 participants of the EXTEMPORE event.\n
</string>
</resources>