<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:id="@+id/image_event_info"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="5sp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/event_decs"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:layout_marginTop="5sp"
                android:layout_marginLeft="10sp"
                android:id="@+id/text_event_desc"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="18sp"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="5sp"
                android:text="@string/event_task"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:layout_marginTop="5sp"
                android:layout_marginLeft="10sp"
                android:id="@+id/text_event_task"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="18sp"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="5sp"
                android:text="@string/event_time_and_venue"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:layout_marginTop="5sp"
                android:layout_marginLeft="10sp"
                android:id="@+id/text_event_timevenue"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="5sp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="18sp"
                android:text="@string/event_prerequisite"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:layout_marginTop="5sp"
                android:layout_marginLeft="10sp"
                android:id="@+id/text_event_prerequisite"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="5sp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="18sp"
                android:text="@string/event_judgemental_criteria"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:layout_marginTop="5sp"
                android:layout_marginLeft="10sp"
                android:id="@+id/text_event_judgemental_criteria"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="18sp"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="5sp"
                android:text="@string/event_coordinator"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:layout_marginTop="5sp"
                android:layout_marginLeft="10sp"
                android:id="@+id/text_event_coordinators"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>